pkg/i2gw/providers/nginx/fixtures/annotations/output/nginx-grpc-services.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: grpc.example.com
    name: grpc-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: grpc-services-test-grpc-example-com
  namespace: default
spec:
  hostnames:
  - grpc.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: grpc-svc
      port: 8080
    matches:
    - method:
        method: SayHello
        service: helloworld.Greeter
status:
  parents: null
