pkg/i2gw/providers/nginx/fixtures/annotations/output/nginx-listen-ports.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: custom-ports.example.com
    name: custom-ports-example-com-https-8443
    port: 8443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: null
        kind: null
        name: custom-ports-tls
        namespace: default
      mode: Terminate
  - hostname: custom-ports.example.com
    name: custom-ports-example-com-http-8080
    port: 8080
    protocol: HTTP
  - hostname: custom-ports.example.com
    name: custom-ports-example-com-http-9090
    port: 9090
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: listen-ports-test-custom-ports-example-com
  namespace: default
spec:
  hostnames:
  - custom-ports.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: app-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /app
status:
  parents: []
