pkg/i2gw/providers/nginx/fixtures/annotations/output/nginx-proxy-set-headers.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: set-headers.example.com
    name: set-headers-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: proxy-set-headers-test-set-headers-example-com
  namespace: default
spec:
  hostnames:
  - set-headers.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-service
      port: 8080
    filters:
    - requestHeaderModifier:
        set:
        - name: header-a
          value: value-a
        - name: header-b
          value: value-b
      type: RequestHeaderModifier
    matches:
    - path:
        type: PathPrefix
        value: /echo
status:
  parents: []
