pkg/i2gw/providers/nginx/fixtures/annotations/output/nginx-ssl-services.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: cafe.example.com
    name: cafe-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ssl-services-test-cafe-example-com
  namespace: default
spec:
  hostnames:
  - cafe.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: secure-app
      port: 8443
    matches:
    - path:
        type: PathPrefix
        value: /ssl
  - backendRefs:
    - name: tea
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /tea
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ssl-services-test-secure-app-backend-tls
  namespace: default
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: secure-app
  validation:
    hostname: ""
status:
  ancestors: null
